--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -325,6 +325,16 @@
         color: #fff !important;
         overflow: hidden;
     }
+    
+    .menu-esquerdo h3 a, .menu-esquerdo h3 p {
+        display: block;
+        font-size: 16px;
+        font-weight: bold;
+        line-height: 14px;
+        padding: 10px;
+        overflow: hidden;
+        text-transform: uppercase;
+    }
 
     .icon-menu-fechado:before {
         content: "\e005" !important;
