--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -328,6 +328,14 @@
         overflow: hidden;
     }
     
+    .menu-esquerdo .nivel-2 a {
+        border-bottom: 1px dotted;
+        display: block;
+        font-size: 13px;
+        font-weight: normal;
+        padding: 6px 7px;
+    }
+    
     .menu-esquerdo h3 a, .menu-esquerdo h3 p {
         display: block;
         font-size: 16px;
