--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -407,6 +407,16 @@
         text-align: left;
         text-transform: uppercase;
     }
+    
+    .carrinho-compras {
+        background: transparent;
+        border-radius: 0;
+        border: none;
+        height: 0;
+        margin: 0;
+        padding: 0;
+        position: relative;
+}
 
     #news {
         display: none;
