--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -298,7 +298,7 @@
         float: none !important;
     }
 
-    .busca-botao {
+    #form-suggestion .busca-botao{
         background: #f6f6f6 url('https://images.tcdn.com.br/img/arquivos/mobile/images/mobile/lupa.png?v=3') center center no-repeat !important;
         margin: 0 !important;
         border: 0 none;
