--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -214,7 +214,7 @@
         box-sizing: border-box;
         height: 120px;
         border-radius: 0 0 10px 10px;
-
+        z-index: 999;
     }
 
     .nav-cliente {
@@ -322,11 +322,6 @@
     .icon-carrinho {
         display: none;
     }
-    .menu-esquerdo h3 {
-        background: #999!important;
-        color: #fff !important;
-        overflow: hidden;
-    }
 
     .menu-esquerdo .nivel-2 a {
         border-bottom: 1px dotted;
@@ -334,6 +329,9 @@
         font-size: 13px;
         font-weight: normal;
         padding: 6px 7px;
+        color: #999 !important;
+        padding: 10px 10px;
+        font-size: 14px;
     }
 
     .menu-esquerdo h3 a, .menu-esquerdo h3 p {
@@ -376,19 +374,18 @@
         padding: 0 ;
         list-style: none;
     }
+    
     .nivel-2 li a span{
         display: none;
     }
+    
     .menu-esquerdo h3{
         border-radius: 0;
         border-bottom: 1px solid #fff !important;
         padding: 0;
-    }
-
-    .menu-esquerdo .nivel-2 a { 
-        color: #999 !important;
-        padding: 10px 10px;
-        font-size: 14px;
+        background: #999!important;
+        color: #fff !important;
+        overflow: hidden;
     }
 
     .menu-esquerdo .nivel-2 {
