--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -227,11 +227,13 @@
     }
     .nav-cliente li {
         margin: 0;
+        font-size: 12px;
     }
 
     .nav-cliente li a {
         display: inline-block;
-        margin: 0 5px;   
+        margin: 0 5px; 
+        font-size: 12px;
     }
 
     .bg-busca {
