--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -272,6 +272,9 @@
         text-align: center;
         float: none;
         background: transparent;
+        border-top: none;
+        margin-top: 0;
+        padding: 0
     }
 
 
