--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1,17 +1,5 @@
 @media (max-width: 768px) {
     /* teste commit*/
-
-    @font-face {
-        font-family: 'tema_basico';
-        src:url('fonts/tema_basico.eot');
-        src:url('fonts/tema_basico.eot?#iefix') format('embedded-opentype'),
-            url('fonts/tema_basico.woff') format('woff'),
-            url('fonts/tema_basico.ttf') format('truetype'),
-            url('fonts/tema_basico.svg#tema_basico') format('svg');
-        font-weight: normal;
-        font-style: normal;
-    }
-
     @import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,700,600);
 
     * {
@@ -380,12 +368,30 @@
         width: 35px;
     }
 
-    .icon-menu-fechado:before {
-        content: "\e005" !important;
-    }
-    .icon-menu-aberto:before {
-        content: "\e004"  !important;;
-    }
+    .menu-esquerdo .icon-menu-fechado:before {
+        border-top: 4px solid transparent;
+        border-bottom: 4px solid transparent;
+        content: "";
+        height: 0px;
+        margin-top: -4px;
+        position: absolute;
+        top: 50%;
+        right: 13px;
+        width: 0px;
+        border-left: 5px solid #FFF;
+}
+    .menu-esquerdo .icon-menu-aberto:before {
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent;
+    border-top: 5px solid #FFF;
+    content: "";
+    height: 0px;
+    margin-top: -4px;
+    position: absolute;
+    top: 50%;
+    right: 13px;
+    width: 0px;
+}
 
     .menu-esquerdo {
         border: none !important;
