--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -481,11 +481,14 @@
     
     .nav-pages li {
         padding: 10px 0;
+        border: none;
     }
 
     .mini-menu-rodape .nav-pages li a{
         padding: 0 10px;
         color: #999;
+        display: block;
+        text-align: left;
     }
 
     .filtros {
