--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -129,6 +129,8 @@
         margin-top: 40px;
         top: 40px;
         overflow: initial;
+        border: 0;
+        box-shadow: 0;
     }
 
     .menu-mobile {
