--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -74,6 +74,7 @@
         margin: 50px 0 0 0 !important;
         position: relative;
         overflow: hidden;
+        border: none !important;
     }
 
     #div1bg {
