--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -383,7 +383,7 @@
         width: 100%;
     }
 
-    a:before {
+    .menu-esquerdo h3 a:before {
         background-color: transparent;
         border-top: none;
         content: "";
