--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -91,6 +91,7 @@
         margin: 0 !important;
         min-height: 100%;
         border: 0 !important;
+        padding-top: 10px;
     }
 
     #NavInferior {
