--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -472,7 +472,7 @@
         display: none;
     }
     .nav-cliente li:first-child {
-        display: inline-block;
+        display: block;
     }
     #news {
         display: none;
