--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -165,7 +165,7 @@
         width: 100% !important;
         text-align: center;
         overflow: initial !important;
-        margin: 16px 0px 7px !important;
+        margin: 0;
         height: auto !important;
     }
 
