--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -59,7 +59,7 @@
         max-width: 100% !important;
         font-family: 'Open Sans', sans-serif !important;
         padding: 0 5px;;
-        margin: 50px 0 0 0 !important;
+        margin: 0;
         position: relative;
         overflow: hidden;
         border: none !important;
