--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -90,7 +90,7 @@
         margin: 0 !important;
         min-height: 100%;
         border: 0 !important;
-        padding-top: 10px;
+        padding-top: 0;
     }
 
     #NavInferior {
