--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -69,6 +69,8 @@
         position: relative;
         top: 50px;
         margin:0 !important;
+        padding: 0 !important;
+        border: none;
     }
 
     #NavVisitados, 
@@ -82,7 +84,7 @@
 
     #NavLateralEsquerda {
         position: absolute;
-        top: -10px;
+        top: 0;
         width: 100%;
         display: none;
         background: #eee;
