--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -178,8 +178,12 @@
     }
 
     .logotipo a{
-        height: auto !important;
-        padding: 15px 0;
+        display: inline-block;
+        font-size: 24px;
+        height: auto;
+        line-height: inherit;
+        max-height: 100%;
+        vertical-align: middle;
     }
 
     #logotipo img {
