--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -101,10 +101,11 @@
         position: relative;
         box-shadow: 0 0 5px rgba(43, 44, 42, 0.32);
         background: transparent !important;
+        top: 50px;
     }
 
     .rodape {
-        margin-top: 35px;
+        margin-top: 20px;
     }
     
     .rodape-info {
