--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -120,10 +120,15 @@
         border: none !important;
     }
     
+    .rodape-info h6 {
+        color: #999;
+    }
+    
     .forma-tipo {
         font-size: 16px;
         display: block;
         padding: 10px 0;
+        color: #999;
     }
     
     #NavSuperior {
