--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1234,8 +1234,7 @@
     
     .central-saudacao h2 {
         display: inline-block;
-        padding: 10px 0 ;
-        vertical-align: middle;
+        padding: 10px 10px ;
     }
 
     .central-icons-pai {
