--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1325,7 +1325,7 @@
 
     .central-conteudo {
         display: block;
-        margin: 20px 0;
+        margin: 20px 0 0 0;
     }
 
     .central-conteudo .board, .central-conteudo h1, .central-conteudo a {
