--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1309,6 +1309,10 @@
         z-index: 2;
         display: block;
     }
+    
+    span.breadcrumb-item:nth-child(3) {
+        display: none;
+    }
 
     .icoFilho {
         display: block;
