--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1233,6 +1233,10 @@
         display: none;
     }
     
+    .central-breadcrumb .board {
+        display: none !important;
+    }
+    
     .central-saudacao h2 {
         display: inline-block;
         padding: 10px 10px ;
