--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1233,7 +1233,7 @@
         display: none;
     }
     
-    .central-breadcrumb .board {
+    .central-breadcrumb .container2 {
         display: none !important;
     }
     
