--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1256,7 +1256,7 @@
         display: none;
     }
     
-    .central-breadcrumb .board {
+    .central-conteudo .board {
         display: none !important;
     }
 
