--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1276,7 +1276,7 @@
     
     .breadcrumb {
         margin: 0;
-        padding-bottom: 10px;
+        padding: 10px;
     }
 
     .central-menu img {
