--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1382,6 +1382,10 @@
         font-size: 10px;
         border-bottom: 1px solid #eee;
     }
+    
+    .tablePage th {
+        background: transparent;
+    }
 
     .tablePage td, .tablePage th, table td, table th, .Pedidos td, .Pedidos th {
         padding: 5px !important;
