--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1391,6 +1391,10 @@
     .tablePage td, .tablePage th, table td, table th, .Pedidos td, .Pedidos th {
         padding: 5px !important;
     }
+    
+    .tit-destinatario h3 {
+        padding: 10px 0;
+    }
 
     .Pedidos tr:first-child th:nth-child(4) {
 
