--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -7,7 +7,7 @@
         box-sizing: border-box;
         font-weight: normal;
     }
-    
+
     a:hover {
         text-decoration: none !important;
     }
@@ -108,7 +108,7 @@
     .rodape {
         margin-top: 20px;
     }
-    
+
     .rodape-info {
         background:  #eee;
         margin: 0 !important;
@@ -120,18 +120,18 @@
         width: 90%;
         border: none !important;
     }
-    
+
     .rodape-info h6 {
         color: #999 !important;
     }
-    
+
     .forma-tipo {
         font-size: 16px;
         display: block;
         padding: 10px 0;
         color: #999;
     }
-    
+
     #NavSuperior {
         margin: 0;
         border: 0;
@@ -240,12 +240,12 @@
         padding: 0 !important;
         width: 100%;
     }
-    
+
     .nav-cliente li {
-       margin: 0px;
+        margin: 0px;
         font-size: 16px;
         color: #999;
-        
+
     }
 
     .nav-cliente li a {
@@ -284,7 +284,7 @@
         text-align: center;
         float: none;
     }
-    
+
     .carrinho-descricao span {
         color: #999 !important;
     }
@@ -305,15 +305,15 @@
     .carrinho-itens li:first-child{
         float: none;
     }
-    
+
     .carrinho-itens li:last-child{
         float: none;
     }
-    
+
     .carrinho-separador-basico {
         display: block !important;
     }
-    
+
     .caixa-busca {
         width: 100%;
         display: table;
@@ -325,7 +325,7 @@
         padding: 0 !important;
         box-shadow: 0 !important;
     }
-    
+
     .caixa-busca label {
         border: none;
         padding: 0 !important;
@@ -1228,15 +1228,15 @@
     .central-saudacao {
         margin: 20px 0;
     }
-    
+
     .central-saudacao p {
         display: none;
     }
-    
+
     .central-breadcrumb .container2 {
         display: none !important;
     }
-    
+
     .central-saudacao h2 {
         display: inline-block;
         padding: 10px 10px ;
@@ -1255,7 +1255,7 @@
         width: 100%;
         display: none;
     }
-    
+
     .central-conteudo .board {
         display: none !important;
     }
@@ -1273,7 +1273,7 @@
         text-transform: uppercase !important;
         font: 700 16px/49px "Open Sans",sans-serif;
     }
-    
+
     .breadcrumb {
         margin: 0;
         padding: 10px;
@@ -1324,7 +1324,7 @@
         z-index: 2;
         display: block;
     }
-    
+
     span.breadcrumb-item:nth-child(3),
     span.breadcrumb-spacer:nth-child(2) {
         display: none;
@@ -1348,7 +1348,7 @@
         margin: 20px 0 0 0;
     }
 
-     .central-conteudo h1, .central-conteudo a {
+    .central-conteudo h1, .central-conteudo a {
         display: inline-block;
         font-size: 14px !important;
         color: #333;
@@ -1382,7 +1382,7 @@
         font-size: 10px;
         border-bottom: 1px solid #eee;
     }
-    
+
     .tablePage th {
         background: transparent;
         border: 1px solid #fff;
@@ -1391,12 +1391,12 @@
     .tablePage td, .tablePage th, table td, table th, .Pedidos td, .Pedidos th {
         padding: 5px !important;
     }
-    
+
     .tit-nome-destinatario,
     .tit-dados-entrega{
         font-size: 13px;
     }
-    
+
     .tit-destinatario h3 {
         padding: 10px 0;
     }
@@ -1462,18 +1462,20 @@
     }
 
     /* Confirmar pagamento*/
-    
+
     .caixa-lista-formas #ProdAbas {
         background: #eee;
     }
-    
+
     .caixa-lista-formas .leftCorner2 {
         display: none;
     }
-    
+
     .caixa-lista-formas #ProdAbas ul li a, 
     .caixa-lista-formas #ProdAbas .aberta a {
-        font-size: 16px !important;  
+        background: none repeat scroll 0 0 transparent;
+        display: block;
+        font-size: 16px !important;
     }
 
     .central-conteudo hr {
@@ -1974,11 +1976,11 @@
         margin-top: -25px;
         float: right;
     }
-    
+
     #formas_envio_frete table {
         width: 100%;
     }
-    
+
     #formas_envio_frete td {
         border: 0 none;
         display: inline-block;
