--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2290,6 +2290,7 @@
         width: 61px;
         height: 36px;
         background: url('https://images.tcdn.com.br/img/arquivos/mobile/images/mobile/bt-pagar.png') !important;
+        font-size: 0;
         bottom: 0;
         right: 10px;
     }
