--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2177,6 +2177,10 @@
     .lista-formas-pagamento li {
         position: relative;
     }
+    
+    .lista-formas-pagamento li:hover {
+        background: #eee;
+    }
 
     .mensagem-popup {
         display: none;
