--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -58,7 +58,7 @@
         width: 100% !important;
         max-width: 100% !important;
         font-family: 'Open Sans', sans-serif !important;
-        padding: 0 5px;;
+        padding: 0 5px 50px 5px;
         margin: 0;
         position: relative;
         overflow: hidden;
