--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -968,6 +968,15 @@
         font: 400 13px/13px 'Lato', sans-serif;
         color: #6e6e6e;
     }
+    
+    
+    #footer .copyright-mensagem {
+        background-color: transparent;
+        font-size: 11px;
+        margin-top: 0;
+        padding: 0;
+        text-align: center;
+    }
 
     .store-info {
         text-align: center;
