--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1296,7 +1296,7 @@
     .TimeLine5, .TimeLine7 {
         background: none;
         border: none;
-        margin-left: 0;
+        margin: 0 auto;
         padding: 20px 0;
         width: 90%;
     }
