--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1299,6 +1299,7 @@
         margin: 0 auto;
         padding: 20px 0;
         width: 90%;
+        font-size: 13px;
     }
 
     .TimeLine5 ul li{
