--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1218,7 +1218,8 @@
     }
 
     div.board:nth-child(4) {
-        text-align: right;
+        text-align: left;
+        padding: 10px 0;
     }
 
     div.board:nth-child(2) > fieldset:nth-child(10) > label:nth-child(20) {
