--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1220,6 +1220,7 @@
     div.board:nth-child(4) {
         text-align: left;
         padding: 10px 0;
+        display: block;
     }
 
     div.board:nth-child(2) > fieldset:nth-child(10) > label:nth-child(20) {
