--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1221,6 +1221,7 @@
         text-align: left;
         padding: 10px 0;
         display: block;
+        font-size: 14px;
     }
 
     div.board:nth-child(2) > fieldset:nth-child(10) > label:nth-child(20) {
