--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1219,9 +1219,9 @@
 
     div.board:nth-child(4) {
         text-align: left;
-        padding: 10px 0;
-        display: block;
-        font-size: 14px;
+        padding: 10px 0 !important;
+        display: block !important;;
+        font-size: 12px;
     }
 
     div.board:nth-child(2) > fieldset:nth-child(10) > label:nth-child(20) {
