--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1413,6 +1413,11 @@
     .tablePage {
         border: none;
     }
+    
+    .Pedidos {
+        border: none;
+    }
+    
     .tablePage tr:first-child th, 
     table tr:first-child th, 
     .Pedidos tr:first-child th {
