--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2383,7 +2383,7 @@
     }
     
     .vitrineVisitados .bts2 {
-        padding: 15px;
+        padding: 5px 10px;
         display: block;
         width: auto;
         height: auto;
