--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2384,6 +2384,7 @@
     
     .vitrineVisitados .bts2 {
         padding: 5px 10px;
+        border-radius: 5px;
         display: block;
         width: auto;
         height: auto;
