--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1112,7 +1112,7 @@
         border: none;
         margin: 0px;
         text-align: left;
-        display: none;
+        display: block;
         background: none !important;
     }
 
